--- a/nginx/matrix.blueskycommunity.net.conf
+++ b/nginx/matrix.blueskycommunity.net.conf
@@ -5,12 +5,12 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    proxy_set_header Host $http_host;
+    proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-    location ~* ^(\/_matrix|\/_synapse\/client) {
-        proxy_pass http://synapse:8008;
+    location / {
+        proxy_pass http://synapse:8008/;
         client_max_body_size 50M;
     }
 
